添加访问相册的plist配置（iOS10下的隐私权限）

--- a/polyvSDK/polyvSDK-Info.plist
+++ b/polyvSDK/polyvSDK-Info.plist
@@ -31,6 +31,8 @@
 	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>Main</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>访问相册</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
