--- a/polyvSDK/polyvSDK-Info.plist
+++ b/polyvSDK/polyvSDK-Info.plist
@@ -24,27 +24,31 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+
+	<!-- 添加ATS配置 -->
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
 			<dict>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPSLoads</key>
+				<false/>
 				<key>NSIncludesSubdomains</key>
 				<true/>
 				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
-				<key>NSTemporaryExceptionAllowsInsecureHTTPSLoads</key>
-				<false/>
 				<key>NSTemporaryExceptionMinimumTLSVersion</key>
 				<string>1.0</string>
 				<key>NSTemporaryExceptionRequiresForwardSecrecy</key>
 				<false/>
 			</dict>
 		</dict>
+		<!-- 项目还有 HTTP 请求，或开启 HttpDNS 功能，保留以下配置 -->
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 	</dict>
+	
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>访问相册</string>
 	<key>UIBackgroundModes</key>
